add: fastapi init

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -27,6 +27,15 @@ services:
     ports:
       - "5050:80"
 
+  fastapi:
+    build: .
+    #image: tiangolo/uvicorn-gunicorn-fastapi:python3.9
+    command: uvicorn app.main:app --host 0.0.0.0 --port 8000
+    volumes:
+      - .:/app
+    ports:
+      - "8888:8000"
+
 #   mysql_db:
 #     image: mysql
 #     ports:
@@ -39,7 +48,6 @@ services:
 #       MYSQL_DATABASE: readings
 #       MYSQL_USER: diabetic
 #       MYSQL_PASSWORD: diabetic
-
 
 volumes:
   db_data: {}
